Gtk3: Fix black patches on GtkFileChooser dialogs

This CL fixes parts of GtkFileChoosers not getting rendered on GNOME
standard themes (Adwaita + HighContrast) causing black areas to
appear.

BUG=704092
R=erg@chromium.org
TBR=sky@chromium.org

Review-Url: https://codereview.chromium.org/2854773002
Cr-Commit-Position: refs/heads/master@{#468803}

Former-commit-id: ea8d1f89cb74cd379d78cf276bf6efbc3bf3ba6c